package(default_visibility = ["//visibility:public"])

load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

native_binary(
    name = "bluepill",
    src = 'bin/bluepill',
    out = "bluepill",
)

native_binary(
    name = "bp",
    src = 'bin/bp',
    out = "bp",
)

exports_files([
    "bluepill_batch_test_runner.template.sh"
])

py_binary(
    name = "nm_extract_symbol_py",
    srcs = ["nm_extract_symbol.py"],
    main = "nm_extract_symbol.py",
)

py_binary(
    name = "rbe_test_sharding_py",
    srcs = ["rbe_test_sharding.py"],
    main = "rbe_test_sharding.py",
)
